Fix center alignment for buttons

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -192,7 +192,7 @@ input {
         font-size: 11px;
         letter-spacing: 1px;
         text-transform: uppercase;
-        padding: 14px 28px 13px 28px;
+        padding: 13px 28px;
     }
 
     &.btn-green {
